Fixing hero rendering on mobile for hero class

--- a/modules/widgets/hero/hero.scss
+++ b/modules/widgets/hero/hero.scss
@@ -142,18 +142,20 @@ $3dsize: 6px;
   }
 
   @media screen and (max-width: $screenSmallMax) {
-    min-height: 0;
+    &.hero {
+      min-height: 0;
 
-    .background {
-      position: fixed;
-      top: 200%;
-    }
+      .background {
+        position: fixed;
+        top: 200%;
+      }
 
-    .slides {
-      position: relative;
+      .slides {
+        position: relative;
 
-      .slide {
-        width: 100%;
+        .slide {
+          width: 100%;
+        }
       }
     }
   }
